<resources>
    <string name="app_name">Eros</string>
    <string name="user_name">Username</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="appbanner">appBanner</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">profile</string>
    <string name="individual">individual</string>
    <string name="company">company</string>
    <string name="sample_txt">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="submit">Submit</string>
    <string name="user_profile_page">User Profile Page</string>
    <string name="messages_page">Messages Page</string>
    <string name="notifications_page">Notifications Page</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datemainpicture">DateMainPicture</string>
    <string name="textview">TextView</string>
    <string name="date_description">Date Description</string>
    <string name="gallery">Gallery</string>
    <string name="location">location</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="image_full_view">Image Full View</string>
    <string name="user_profile_photo">user_profile_photo</string>
    <string name="b">B</string>
    <string name="builder_subtitle">Build a profile and tell Eros a little about yourself.</string>
    <string name="profile_builder">Profile Builder</string>
    <string name="completion_progress">Completion Progress</string>
    <string name="_0_100">0/100</string>
    <string name="social_background">Social Background</string>
    <string name="contact_information">Contact Information</string>
    <string name="next">next</string>
    <string name="preferences">Preferences</string>
    <string name="about_me_img">about_me_img</string>
    <string name="preferences_img">preferences_img</string>
    <string name="contact_information_img">contact_information_img</string>
    <string name="social_background_img">social_background_img</string>
    <string name="shared_preferences_of_user">com.visionaryTech.eros.userPreferences</string>
    <string name="dateprofilepicture">dateProfilePicture</string>
    <string name="person_s_name">Person\'s name</string>
    <string name="person_s_location">Person\'s location</string>
    <string name="picture_of_possible_match">Picture Of Possible Match</string>
    <string name="possibleMatches">Possible Matches</string>
    <string name="addNewPicture">Add New Picture</string>
    <string name="profileText">Profile</string>
    <string name="about_me">About Me</string>
    <string name="deleteAccount">delete account</string>
    <string name="logout">logout</string>
    <string name="views">Views</string>
    <string name="bio">Bio</string>
    <string name="requesterprofileimage">requesterProfileImage</string>
    <string name="notification_details">Notification details</string>
    <string name="time">time</string>


    <string-array name="GENDER_VALUES">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="RELIGION_VALUES">
        <item>Christian</item>
        <item>Muslim</item>
        <item>Traditional</item>
        <item>Atheist</item>
        <item>Other</item>
    </string-array>
</resources>
