<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:orientation="vertical"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/requesterProfileImg"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/requesterprofileimage"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic[5]" />

        <LinearLayout
            android:id="@+id/messageRequester"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <TextView
                android:id="@+id/messageDetails"
                style="@android:style/Widget.DeviceDefault.Light.TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/notification_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeSinceRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/time"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#636e72"
                android:textSize="14sp"
                app:autoSizeMaxTextSize="12sp"
                app:autoSizeMinTextSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>