<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/emailAddressTextView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/textview"
            android:ems="10"
            android:hint="@string/user_email"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/passwordTextView"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:background="@drawable/textview"
            app:layout_constraintEnd_toEndOf="@+id/emailAddressTextView"
            app:layout_constraintStart_toStartOf="@+id/emailAddressTextView"
            app:layout_constraintTop_toBottomOf="@+id/emailAddressTextView" />

        <Button
            android:id="@+id/routeToProspects"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextView"
            app:layout_constraintStart_toStartOf="@+id/passwordTextView"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/routeToProspects"
            app:layout_constraintStart_toStartOf="@+id/routeToProspects"
            app:layout_constraintTop_toBottomOf="@+id/routeToProspects" />

        <TextView
            android:id="@+id/routeToSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Register Here"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/routeToSignUp"
            app:layout_constraintStart_toStartOf="@+id/routeToSignUp"
            app:layout_constraintTop_toBottomOf="@+id/routeToSignUp" />

        <TextView
            android:id="@+id/routeToForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Forgot Password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/divider4"
            app:layout_constraintStart_toStartOf="@+id/divider4"
            app:layout_constraintTop_toBottomOf="@+id/divider4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>